--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "lodash": "^4.17.4",
     "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
-    "react-hz": "^0.4.0",
     "react-native": "^0.49.5",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^3.7.2"
   }
 }
